2022-11-09T08:09:26Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3426379211 # 606
* notice: last 14d: unq all: 7 5696
* notice: prev accum: outdated-unq outdated-all / unq all: 1194 82410 / 1221 88144
* notice: next accum: outdated-unq outdated-all / unq all: 1194 82410 / 1222 88106
* notice: prev exec diff / last date diff / accum: unq all: +1 +138 -0 -176 / +1 +138 -0 -0 / 1 138
* notice: removed / changed dates: [] / [2022-10-26 2022-11-09]

2022-11-09T00:32:29Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3424352189 # 605
* notice: last 14d: unq all: 7 5734
* notice: prev accum: outdated-unq outdated-all / unq all: 1192 82010 / 1219 87674
* notice: next accum: outdated-unq outdated-all / unq all: 1194 82410 / 1221 88144
* notice: prev exec diff / last date diff / accum: unq all: +2 +154 -0 -20 / +5 +416 -0 -0 / 5 416
* notice: removed / changed dates: [2022-10-25] / [2022-10-26 2022-11-08]

2022-11-08T16:06:53Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3421132745 # 604
* notice: last 14d: unq all: 5 5664
* notice: prev accum: outdated-unq outdated-all / unq all: 1192 82010 / 1217 87696
* notice: next accum: outdated-unq outdated-all / unq all: 1192 82010 / 1219 87674
* notice: prev exec diff / last date diff / accum: unq all: +2 +121 -0 -143 / +3 +262 -0 -0 / 3 262
* notice: removed / changed dates: [] / [2022-10-25 2022-11-08]

2022-11-08T08:08:44Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3417506747 # 603
* notice: last 14d: unq all: 3 5686
* notice: prev accum: outdated-unq outdated-all / unq all: 1192 82010 / 1216 87736
* notice: next accum: outdated-unq outdated-all / unq all: 1192 82010 / 1217 87696
* notice: prev exec diff / last date diff / accum: unq all: +1 +141 -0 -181 / +1 +141 -0 -0 / 1 141
* notice: removed / changed dates: [] / [2022-10-25 2022-11-08]