@@ -1,10 +1,10 @@
 {
-  "count": 5696,
+  "count": 5670,
   "uniques": 7,
   "clones": [
     {
       "timestamp": "2022-10-26T00:00:00Z",
-      "count": 215,
+      "count": 68,
       "uniques": 2
     },
     {
@@ -74,7 +74,7 @@
     },
     {
       "timestamp": "2022-11-09T00:00:00Z",
-      "count": 138,
+      "count": 259,
       "uniques": 1
     }
   ]
