@@ -1,3 +1,11 @@
+2022-11-09T16:07:31Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3429798339 # 607
+* notice: last 14d: unq all: 7 5670
+* notice: prev accum: outdated-unq outdated-all / unq all: 1194 82410 / 1222 88106
+* notice: next accum: outdated-unq outdated-all / unq all: 1194 82410 / 1222 88080
+* notice: prev exec diff / last date diff / accum: unq all: +0 +121 -0 -147 / +1 +259 -0 -0 / 1 259
+* notice: removed / changed dates: [] / [2022-10-26 2022-11-09]
+
 2022-11-09T08:09:26Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3426379211 # 606
 * notice: last 14d: unq all: 7 5696
